# Topological-metabolic-gap-filling

./: .gitignore  README.md  environment.yml  pyproject.toml
data/processed/: README.md
data/raw/: README.md
report/: README.md  main.tex  references.bib
scripts/: 01_download_bigg_model.py  02_summarize_model.py  03_build_graph.py  04_explore_network.py  05_prepare_benchmark_splits.py  06_make_removal_slider.py  07_run_baselines.py  08_run_node2vec.py  09_node2vec_sensitivity.py  10_analyze_top_predictions.py  11_make_final_figures.py  12_make_topn_prediction_figure.py
src/metabolic_gap_filling/: __init__.py  baselines.py  config.py  data.py  evaluate.py  filters.py  graph.py  node2vec_model.py  splits.py  visualize.py
src/topological_metabolic_gap_filling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_graph.py
